--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "Crypto",
   "version": "1.0.0",
-  "description": "A cryptocurrency app built on React and Node!",
+  "description": "A cryptocurrency app built on react, express, mongodb and nodejs!",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -23,17 +23,16 @@
   },
   "homepage": "https://github.com/bigmuflar/crypto#readme",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "browserify": "^13.1.1",
-    "es6-promise": "^4.0.5",
-    "express": "^4.14.0",
+    "body-parser": "^1.14.2",
+    "browserify": "^12.0.1",
+    "es6-promise": "^3.0.2",
+    "express": "^4.13.3",
     "guid": "0.0.12",
-    "gulp": "^3.9.1",
-    "jquery": "^3.1.1",
-    "morgan": "^1.7.0",
-    "path": "^0.12.7",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "gulp": "^3.9.0",
+    "jquery": "^2.1.4",
+    "mongoose": "^4.3.4",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "reactify": "^1.1.1",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0"
